# NovaFlare-Engine-Helper

./: CMakeLists.txt  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/res/values/: strings.xml
